# game-of-life

./: .gitignore  01.proto.cpp  CMakeLists.txt  LICENSE  README.md  To-Do.md  a.out  build_all.sh
old/: 01.proto.cpp
src/: divider.cpp  game_of_life.cpp  game_of_life.h  get_size.cpp  main.cpp
